--- a/apollo/frontend/templates/frontend/forgot_password.html
+++ b/apollo/frontend/templates/frontend/forgot_password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100"{% if g.locale.text_direction == 'rtl' %} dir="rtl"{% endif %}>
 <head>
     <meta charset="utf-8">
     <title>{{ _('Password Reset') }}</title>
@@ -9,7 +9,11 @@
     <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
             <![endif]-->
+    {% if g.locale.text_direction == 'rtl' -%}
+    <link rel="stylesheet" href="{{ asset_url_for('styles-rtl.css') }}">
+    {%- else -%}
     <link rel="stylesheet" href="{{ asset_url_for('styles.css') }}">
+    {%- endif %}
 </head>
 <body class="h-100">
     <form class="h-100" name="forgot_password_form" action="{{ url_for_security('forgot_password') }}" method="POST"
@@ -28,7 +32,7 @@
                     {% endif %}
                     {%- endwith %}
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header"{% if g.locale.text_direction == 'rtl' %} dir="rtl"{% endif %}>
                             {{ _('Password Reset') }}
                         </div>
                         <div class="card-body">{% if forgot_password_form.errors %}
@@ -53,6 +57,10 @@
             </div>
         </div>
     </form>
+    {% if g.locale.text_direction == 'rtl' -%}
+    <script type="text/javascript" src="{{ asset_url_for('scripts-rtl.js') }}" charset="utf-8"></script>
+    {%- else -%}
     <script type="text/javascript" src="{{ asset_url_for('scripts.js') }}" charset="utf-8"></script>
+    {%- endif %}
 </body>
 </html>
