--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100"{% if g.locale.text_direction == 'rtl' %} dir="rtl"{% endif %}>
   <head>
     <meta charset="utf-8">
     <title>{{ _('User Sign In') }}</title>
@@ -9,7 +9,11 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    {% if g.locale.text_direction == 'rtl' -%}
+    <link rel="stylesheet" href="{{ asset_url_for('styles-rtl.css') }}">
+    {%- else -%}
     <link rel="stylesheet" href="{{ asset_url_for('styles.css') }}">
+    {%- endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome.min.css') }}">
   </head>
   <body class="h-100">
@@ -44,7 +48,7 @@
                   {% if config['ENABLE_SOCIAL_LOGIN'] and config['GOOGLE_CLIENT_ID'] -%}
                   <div class="row pt-3">
                     <div class="col-12">
-                      <a href="{{ url_for('loginpass_google.login') }}" class="btn btn-outline-primary btn-block"><i class="fab fa-google"></i> Sign in with Google</a>
+                      <a href="{{ url_for('loginpass_google.login') }}" class="btn btn-outline-primary btn-block"><i class="fab fa-google"></i> {{ _('Sign in with Google') }}</a>
                     </div>
                   </div>
                   {%- endif %}
@@ -52,7 +56,7 @@
                   <div class="row pt-3">
                     <div class="col-12">
                       <a href="{{ url_for('loginpass_facebook.login') }}" class="btn btn-outline-primary btn-block"><i
-                          class="fab fa-facebook"></i> Sign in with Facebook</a>
+                          class="fab fa-facebook"></i> {{ _('Sign in with Facebook') }}</a>
                     </div>
                   </div>
                   {%- endif %}
@@ -64,6 +68,10 @@
         </div>
       </div>
     </form>
+    {% if g.locale.text_direction == 'rtl' -%}
+    <script type="text/javascript" src="{{ asset_url_for('scripts-rtl.js') }}" charset="utf-8"></script>
+    {%- else -%}
     <script type="text/javascript" src="{{ asset_url_for('scripts.js') }}" charset="utf-8"></script>
+    {%- endif %}
   </body>
 </html>
