--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -17,6 +17,7 @@
     <th class="text-center"><abbr title="{{ _('Status') }}"><i class="glyphicon glyphicon-eye-open"></i></abbr></th>
     {% endif %}
     <th class="text-center"><abbr title="{{ _('Phone Verification') }}"><i class="glyphicon glyphicon-phone"></i></abbr></th>
+    <th class="text-center"><abbr title="{{ _('Quarantine Status') }}"><i class="glyphicon glyphicon-exclamation-sign"></i></abbr></th>
 </tr>
 {% endmacro %}
 {% macro submission_items(submissions, form, form_fields, location_types, perms) %}
@@ -80,9 +81,28 @@
       <i class="fa fa-exclamation-triangle warning" aria-hidden="true" title="{{ _('Unverified') }}"></i>
       {% endif %}
     </td>
+    <td style="text-align: center">
+        {% if not submission.quarantine_status -%}
+        <i class="fa fa-check success" aria-hidden="true" title="{{ _('OK') }}"></i>
+        {%- else -%}
+        <i class="fa fa-exclamation-triangle warning" aria-hidden="true" title="{{ _('Quarantined') }}"></i>
+        {% endif %}
+    </td>
 </tr>
 {% else %}
 {% if perms.edit_submission.can() %}
+{% if form.form_type == 'CHECKLIST' %}
+{%- set colspan = 5 + (location_types|length) + form.data.groups|length -%}
+<tr class="warning">
+    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
+</tr>
+{% else %}
+{%- set colspan = 6 + (location_types|length) + form_fields|length -%}
+<tr class="warning">
+    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
+</tr>
+{% endif %}
+{% else %}
 {% if form.form_type == 'CHECKLIST' %}
 {%- set colspan = 4 + (location_types|length) + form.data.groups|length -%}
 <tr class="warning">
@@ -90,18 +110,6 @@
 </tr>
 {% else %}
 {%- set colspan = 5 + (location_types|length) + form_fields|length -%}
-<tr class="warning">
-    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
-</tr>
-{% endif %}
-{% else %}
-{% if form.form_type == 'CHECKLIST' %}
-{%- set colspan = 3 + (location_types|length) + form.data.groups|length -%}
-<tr class="warning">
-    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
-</tr>
-{% else %}
-{%- set colspan = 4 + (location_types|length) + form_fields|length -%}
 <tr class="warning">
     <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
 </tr>
