fix: apollo versioning

--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -126,7 +126,7 @@
         <div class="container">
           <footer>
           {%- block footer -%}
-            <p style="padding-top:18px;">Apollo &mdash; v3.1 (Bamako)</p>
+            <p style="padding-top:18px;">Apollo v{{ config.VERSION }}</p>
           {%- endblock -%}
           </footer>
         </div>
