--- a/apollo/frontend/templates/frontend/forgot_password.html
+++ b/apollo/frontend/templates/frontend/forgot_password.html
@@ -51,7 +51,7 @@
                                 </div>
                             </section>
                         </div>
-                        <div class="card-footer text-muted text-right"><small>{{ config.VERSION }}</small></div>
+                        <div class="card-footer text-muted text-right"><small>Apollo v{{ config.VERSION }}</small></div>
                     </div>
                 </div>
             </div>
