--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -62,7 +62,7 @@
                   {%- endif %}
                 </section>
               </div>
-              <div class="card-footer text-muted text-right"><small>{{ config.VERSION }}</small></div>
+              <div class="card-footer text-muted text-right"><small>Apollo v{{ config.VERSION }}</small></div>
             </div>
           </div><input type="hidden" name="{{ login_user_form.next.name }}" id="{{ login_user_form.next.id }}" value="{{ login_user_form.next.value }}">
         </div>
