--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -21,6 +21,9 @@
 </div>
 {%- endfor -%}
 <div class="form-group">
+    {{ filter_form['conjunction'](class_='form-control span2 input-sm') }}
+</div>
+<div class="form-group">
 {{ filter_form['quarantine_status'](class_='form-control span2 input-sm') }}
 </div>
 {%- else -%}
