feat: added sender verification filtering

--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -16,7 +16,7 @@
     {% endfor %}
     <th class="text-center"><abbr title="{{ _('Status') }}"><i class="glyphicon glyphicon-eye-open"></i></abbr></th>
     {% endif %}
-    <th class="text-center"><abbr title="{{ _('Phone Verification') }}"><i class="glyphicon glyphicon-phone"></i></abbr></th>
+    <th class="text-center"><abbr title="{{ _('Sender Verification') }}"><i class="glyphicon glyphicon-phone"></i></abbr></th>
     <th class="text-center"><abbr title="{{ _('Quarantine Status') }}"><i class="glyphicon glyphicon-exclamation-sign"></i></abbr></th>
 </tr>
 {% endmacro %}
