--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -41,6 +41,9 @@
 </div>
 {%- endif %}
 <div class="form-group">
+    {{ filter_form['sender_verification'](class_='form-control span2 input-sm') }}
+</div>
+<div class="form-group">
 	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
 </div>
 <div class="form-group">
