--- a/apollo/frontend/templates/admin/base.html
+++ b/apollo/frontend/templates/admin/base.html
@@ -1,7 +1,7 @@
 {% import 'admin/layout.html' as layout with context -%}
 {% import 'admin/static.html' as admin_static with context %}
 <!DOCTYPE html>
-<html>
+<html {%- if g.locale.character_order == 'right-to-left' %} dir="rtl"{%- endif -%}>
   <head>
     <title>{% block title %}{% if admin_view.category %}{{ admin_view.category }} - {% endif %}{{ admin_view.name }} - {{ admin_view.admin.name }}{% endblock %}</title>
     {% block head_meta %}
@@ -10,14 +10,21 @@
         <meta name="author" content="">
     {% endblock %}
     {% block head_css %}
-        <link href="{{ admin_static.url(filename='bootstrap/bootstrap2/css/bootstrap.css') }}" rel="stylesheet">
-        <link href="{{ admin_static.url(filename='bootstrap/bootstrap2/css/bootstrap-responsive.css') }}" rel="stylesheet">
-        <link href="{{ admin_static.url(filename='admin/css/bootstrap2/admin.css') }}" rel="stylesheet">
-        <style>
-        body {
-            padding-top: 4px;
-        }
-        </style>
+      <link href="{{ admin_static.url(filename='bootstrap/bootstrap3/swatch/{swatch}/bootstrap.min.css'.format(swatch=config.get('FLASK_ADMIN_SWATCH', 'default')), v='3.3.5') }}" rel="stylesheet">
+      {%if config.get('FLASK_ADMIN_SWATCH', 'default') == 'default' %}
+      <link href="{{ admin_static.url(filename='bootstrap/bootstrap3/css/bootstrap-theme.min.css', v='3.3.5') }}" rel="stylesheet">
+      {%endif%}
+      <link href="{{ admin_static.url(filename='admin/css/bootstrap3/admin.css', v='1.1.1') }}" rel="stylesheet">
+      {% if admin_view.extra_css %}
+        {% for css_url in admin_view.extra_css %}
+          <link href="{{ css_url }}" rel="stylesheet">
+        {% endfor %}
+      {% endif %}
+      <style>
+      body {
+          padding-top: 4px;
+      }
+      </style>
     {% endblock %}
     {% block head %}
     {% endblock %}
@@ -26,26 +33,37 @@
   </head>
   <body>
     {% block page_body %}
-    <div class="container">
-      <div class="navbar">
-        <div class="navbar-inner">
+    <div class="container{%if config.get('FLASK_ADMIN_FLUID_LAYOUT', False) %}-fluid{% endif %}">
+      <nav class="navbar navbar-default" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#admin-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           {% block brand %}
-          <a href="{{ url_for('dashboard.index') }}"><span class="brand">{{ admin_view.admin.name }}</span></a>
+          <a class="navbar-brand" href="{{ url_for('dashboard.index') }}">{{ admin_view.admin.name }}</a>
           {% endblock %}
+        </div>
+        <!-- navbar content -->
+        <div class="collapse navbar-collapse" id="admin-navbar-collapse">
           {% block main_menu %}
-          <ul class="nav">
+          <ul class="nav navbar-nav">
             {{ layout.menu() }}
           </ul>
           {% endblock %}
+
           {% block menu_links %}
-          <ul class="nav pull-right">
+          <ul class="nav navbar-nav navbar-right">
             {{ layout.menu_links() }}
           </ul>
           {% endblock %}
           {% block access_control %}
           {% endblock %}
         </div>
-      </div>
+      </nav>
 
       {% block messages %}
       {{ layout.messages() }}
@@ -58,9 +76,9 @@
     {% endblock %}
 
     {% block tail_js %}
-    <script src="{{ admin_static.url(filename='vendor/jquery-2.1.1.min.js') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='bootstrap/bootstrap2/js/bootstrap.min.js') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='vendor/moment-2.8.4.min.js') }}" type="text/javascript"></script>
+    <script src="{{ admin_static.url(filename='vendor/jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ admin_static.url(filename='bootstrap/bootstrap3/js/bootstrap.min.js') }}" type="text/javascript"></script>
+    <script src="{{ admin_static.url(filename='vendor/moment.min.js') }}" type="text/javascript"></script>
     <script src="{{ admin_static.url(filename='vendor/select2/select2.min.js') }}" type="text/javascript"></script>
     {% endblock %}
 
