--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -171,6 +171,22 @@
         </td>
         <td>&nbsp;</td>
       </tr>
+      <tr>
+        <td colspan="2" style="vertical-align: middle">
+          <h4>{{ _('Offline?') }}</h4>
+        </td>
+        {%- if readonly -%}
+        <td class="obs-on">{{ render_submission_field(submission_form['unreachable'], disabled=1)}}</td>
+        {%- else -%}
+        <td class="obs-on" {%- if submission_form['unreachable'].errors %} class="danger" {%- endif -%}>
+          {{ render_submission_field(submission_form['unreachable']) }}</td>
+        {%- endif -%}
+        {%- for sibling_form in sibling_forms -%}
+        <td>{{ render_submission_field(sibling_form['unreachable'], disabled=1) }}</td>
+        {%- endfor -%}
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
       {% if perms.edit_submission_quarantine_status.can() %}
       <tr>
         <td colspan="2" style="vertical-align: middle"><h4>{{ _('Quarantine Status') }}</h4></td>
@@ -187,7 +203,7 @@
         {%- else -%}
         <td class="ps-on"{%- if master_form['quarantine_status'].errors %} class="danger"{%- endif -%}>{{ render_submission_field(master_form['quarantine_status'], disabled=1) }}</td>
         {%- endif -%}
-        <td colspan="2">&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
       {% endif %}
       {% for group in form.data.groups %}
@@ -235,7 +251,7 @@
         {%- else -%}
         <td class="ps-on"{%- if master_form['verification_status'].errors %} class="danger"{%- endif -%}>{{ render_submission_field(master_form['verification_status'], disabled=1) }}</td>
         {%- endif -%}
-        <td colspan="2">&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
       {% endif %}
     </tbody>
