if a deployment is not found with localhost, retrieve the first one

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -162,7 +162,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="importModalLabel">{{ _('Import admin divisions') }}</h4>
+        <h4 class="modal-title" id="importModalLabel">{{ _('Import Admin Divisions') }}</h4>
       </div>
       <div class="modal-body">
         <form action="{{ url_for('locations.import_divisions', location_set_id=location_set.id) }}" enctype="multipart/form-data" method="post">
