--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -211,9 +211,13 @@
         <td colspan="{{ siblings|count + 6 }}"><h4>{{ group.name }}</h4></td>
       </tr>
       {% for field in group.fields %}
-      <tr{% if field.tag in submission.flagged_fields and submission.form.verifiable and perms.edit_submission_verification_status.can() %} class="warning"{% endif %}>
+      <tr{% if field.tag in failed_check_tags and submission.form.quality_checks_enabled and perms.edit_submission_verification_status.can() %} class="warning"{% endif %}>
         <th>{{ field.tag }}</th>
-        <td>{{ field.description }}
+        {% if g.locale.character_order != 'right-to-left' %}
+        <td>{% if field.tag in failed_check_tags and submission.form.quality_checks_enabled and perms.edit_submission_verification_status.can() %}<i class="glyphicon glyphicon-flag" style="color: #cc0000;"></i>{% endif %} {{ field.description }}
+        {% else %}
+        <td>{{ field.description }} {% if field.tag in failed_check_tags and submission.form.quality_checks_enabled and perms.edit_submission_verification_status.can() %}<i class="glyphicon glyphicon-flag" style="color: #cc0000;"></i>{% endif %}
+        {% endif %}
           {%- if field['type'] == 'select' %}
           <span class="options">
           {% for item in field.options|dictsort(false, 'value') %}
