--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -40,7 +40,7 @@
     {% endif %}
     {% if form.form_type == 'CHECKLIST' %}
     {% for group in form.data.groups %}
-    <th class="text-center">{% if group.abbr %}<abbr title="{{ group.name }}">{{ group.abbr }}</abbr>{% else %}{{ group.name }}{% endif %}</th>
+    <th class="text-center">{% if group.name|count > 12 %}<abbr title="{{ group.name }}">{{ group.name|truncate(7, True) }}</abbr>{% else %}{{ group.name }}{% endif %}</th>
     {% endfor %}
     {% else %}
     {% for field in form_fields %}
